--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: #342f2f;
   height: 150px;
   padding: 20px;
   color: white;
@@ -21,4 +21,9 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+#card {
+  display: flex;
+  justify-content: flex-end;
+  background: tan;
 }
