--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,26 @@
-.App {
+@import 'https://fonts.googleapis.com/css?family=Cinzel';
+
+.headline {
   text-align: center;
+  margin: auto;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.headline h1 {
+  font-size: 6rem;
+  font-family: 'Cinzel', serif;
+  margin-right: 20vw;
 }
-
-.App-header {
-  background-color: #342f2f;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.headline span {
+  font-size: 4rem;
 }
-
-.App-intro {
-  font-size: large;
+.headline h2 {
+  margin-right: 10vw;
+  margin-top: -2vh;
 }
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+nav {
+    height: 90px;
 }
-#card {
-  display: flex;
-  justify-content: flex-end;
-  background: tan;
+nav img {
+  margin-top:10px;
+  width: 80px;
+  height: 80px;
 }
