--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,7 @@
   text-align: center;
   margin: auto;
 }
-.headline h1 {
-  font-size: 6rem;
-  font-family: 'Cinzel', serif;
-  margin-right: 20vw;
-}
+
 .headline span {
   font-size: 4rem;
 }
@@ -23,4 +19,13 @@ nav img {
   margin-top:10px;
   width: 80px;
   height: 80px;
+}
+.logo {
+  height: 5rem;
+  width: 5rem;
+}
+.textStuff {
+  font-size: 6rem;
+  font-family: 'Cinzel', serif;
+  margin-right: 20vw;
 }
