--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-@import 'https://fonts.googleapis.com/css?family=Cinzel';
+@import "https://fonts.googleapis.com/css?family=Cinzel";
+
 
 .headline {
   text-align: center;
@@ -21,11 +22,45 @@ nav img {
   height: 80px;
 }
 .logo {
-  height: 5rem;
-  width: 5rem;
+  height: 10rem;
+  width: 10rem;
+
 }
 .textStuff {
   font-size: 6rem;
-  font-family: 'Cinzel', serif;
+  font-family: "Cinzel", serif !important;
   margin-right: 20vw;
+}
+.side {
+  background-color: hsl(211,40%,36%);
+  height: 85vh;
+}
+.ello {
+  margin: auto;
+  text-align: center;
+  width: 100%;
+}
+.glyphicon {
+  font-size: 5rem;
+}
+.category {
+  text-align: center;
+  color: rgb(223, 69, 28);
+  font-size: 8rem;
+}
+.picture {
+  margin-top: -5rem;
+  border-radius: 50%;
+  height: 12rem;
+  width: 12rem;
+  padding: 1rem;
+}
+.voteTag {
+  margin-top: -.3rem;
+  color: rgb(223, 69, 28);
+}
+.cardScroll {
+  overflow: scroll;
+  height: 70vh;
+
 }
