Adding more resources

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,9 @@
   text-align: center;
   margin: auto;
 }
-
+.headline h1 {
+  font-size: 8rem;
+}
 .headline span {
   font-size: 4rem;
 }
@@ -22,15 +24,10 @@ nav img {
   height: 80px;
 }
 .logo {
-  height: 10rem;
-  width: 10rem;
+  height: 20rem;
+  width: 20rem;
+}
 
-}
-.textStuff {
-  font-size: 6rem;
-  font-family: "Cinzel", serif !important;
-  margin-right: 20vw;
-}
 .side {
   background-color: hsl(211,40%,36%);
   height: 85vh;
